1. Реализовать шаблон Producer Consumer. [#1098 #411932]