@@ -1,35 +1,46 @@
 package ru.job4j.synch;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.*;
+import java.util.Arrays;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 class SimpleBlockingQueueTest {
 
     @Test
-    public void whenAddAndPollThenSameReturned() throws InterruptedException {
-        SimpleBlockingQueue<Integer> queue = new SimpleBlockingQueue<>();
-        List<Integer> list = new ArrayList<>();
+    public void whenFetchAllThenGetIt() throws InterruptedException {
+        final CopyOnWriteArrayList<Integer> buffer = new CopyOnWriteArrayList<>();
+        final SimpleBlockingQueue<Integer> queue = new SimpleBlockingQueue<>(5);
         Thread producer = new Thread(
                 () -> {
-                    queue.offer(1);
-                }
-        );
-        Thread consumer = new Thread(
-                () -> {
-                    try {
-                        list.add(queue.poll());
-                    } catch (InterruptedException e) {
-                        throw new RuntimeException(e);
+                    for (int i = 0; i < 5; i ++) {
+                        try {
+                            queue.offer(i);
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                            Thread.currentThread().interrupt();
+                        }
                     }
                 }
         );
         producer.start();
-        producer.join();
+        Thread consumer = new Thread(
+                () -> {
+                    while (!queue.isEmpty() || !Thread.currentThread().isInterrupted()) {
+                        try {
+                            buffer.add(queue.poll());
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                            Thread.currentThread().interrupt();
+                        }
+                    }
+                }
+        );
         consumer.start();
-        assertThat(list).isEqualTo(List.of(1));
+        producer.join();
+        consumer.interrupt();
+        consumer.join();
+        Assertions.assertEquals(buffer, Arrays.asList(0, 1, 2, 3, 4));
     }
 }
